--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					'name':$scope.name,
 					'price':$scope.price,
 					'quantity':$scope.quantity})					
-					.success(function(data,status,headers,config){
+					.then(function(data,status,headers,config){
 						console.log("Data Inserted Successfully");
 					});
 				
