--- a/index3.html
+++ b/index3.html
@@ -1,7 +1,7 @@
 <html ng-app>
     <head>
         <title>AngularJS - Tableless</title>
-        <script src="http://code.angularjs.org/1.0.1/angular-1.0.1.min.js"></script>
+        <script type="text/javascript" src="js/angular.js" ></script>
     </head>
     <body>
         <input type="text" ng-model="nome">
