--- a/index3.html
+++ b/index3.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <input type="text" ng-model="nome">
-        <p>Olá, Tableless! Meu nome é: {{ nome }}</p>
+        <p>Texto: {{ nome }}</p>
     </body>
 </html>
