--- a/index3.html
+++ b/index3.html
@@ -1,6 +1,6 @@
 <html ng-app>
     <head>
-        <title>AngularJS - Tableless</title>
+        <title>AngularJS - Olamundo</title>
         <script type="text/javascript" src="js/angular.js" ></script>
     </head>
     <body>
