--- a/index2.html
+++ b/index2.html
@@ -86,9 +86,9 @@
 				/*inserir dados no banco*/
 				$http.post("insert.php", {
 				    id:$scope.id,
-					name:$scope.name,
-					price:$scope.price,
-					quantity:$scope.quantity})					
+					name:"gdgd",
+					price:"gfdgfdg",
+					quantity:"3434"})					
 					.then(function(data,status,headers,config){
 						console.log("Data Inserted Successfully");
 				});
