--- a/index2.html
+++ b/index2.html
@@ -89,7 +89,7 @@
 					name:$scope.name,
 					price:$scope.price,
 					quantity:$scope.quantity})					
-					.then(successCallback, errorCallback);
+					.then(successCallback, errorCallback)
 						
 				});
 				
