--- a/index2.html
+++ b/index2.html
@@ -101,12 +101,7 @@
                 $scope.quantity = '';
 				
 				//listar
-                $scope.listProducts.push({
-                    id:$scope.id,
-                    name:$scope.name,
-                    price:$scope.price,
-                    quantity:$scope.quantity
-                });
+                $scope.listProducts = response.data.records;
             };
 
           
