--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="myapp">
     <head>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
         <script type="text/javascript" src="js/angular.js" ></script>
     </head>
 
@@ -56,8 +57,8 @@
 
         <tr>
             <td>
-                <input type="button" value="Save" ng-click="edit()">
-                <input type="button" value="Add"  ng-click="add()">
+                <input type="button" class="btn btn-primary" value="Save" ng-click="edit()">
+                <input type="button" class="btn btn-primary" value="Add"  ng-click="add()">
             </td>
         </tr>
 
