--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body ng-controller="productController">
 
-    <table cellpadding="2" cellspacing="2" border="1" >
+    <table class="table table-striped" cellpadding="2" cellspacing="2" border="1" >
         <tr> 
             <th> Id </th>
             <th> Name </th>
@@ -31,7 +31,7 @@
 
     <h3> Informar Produto </h3>
 
-    <table class="table">
+    <table >
         
         
         <tr>
