--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body ng-controller="productController">
 
-<div style="height: 15%; ">
+<div style="height: 150px; ">
 
     <table class="table table-striped" cellpadding="2" cellspacing="2" border="1" >
         <tr> 
