--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <div>
 
-    <table class="table" cellpadding="2" cellspacing="2" border="1" >
+    <table cellpadding="2" cellspacing="2" border="1" >
         <tr> 
             <th> Id </th>
             <th> Name </th>
