--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="myapp">
     <head>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.css">
         <script type="text/javascript" src="js/angular.js" ></script>
     </head>
 
@@ -28,7 +28,7 @@
                 </a> 
                 |
                 <a href="#" ng-click="selectEdit(product.id)">
-                    <span class="material-icons" style="font-size:48px;color:red">Edite</span>
+                    <span class="material-icons" >Edite</span>
                 </a>
             </td>
         </tr>
