--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <td>{{product.quantity}}</td>
             <td >
                 <a href="#" ng-click="del(product.id)"> 
-                    <span class="glyphicon glyphicon-remove"></span>                    
+                    <span class="glyphicons glyphicons-remove"></span>                    
                 </a> 
                 |
                 <a href="#" ng-click="selectEdit(product.id)">
-                    <span class="glyphicon glyphicon-pencil">Edite</span>
+                    <span class="glyphicons glyphicons-pencil"></span>
                 </a>
             </td>
         </tr>
