--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <td>{{product.quantity}}</td>
             <td >
                 <a href="#" ng-click="del(product.id)"> 
-                    <span class="glyphicons glyphicons-remove"></span>                    
+                    <span class="glyphicons glyphicons-remove">Deletar</span>                    
                 </a> 
                 |
                 <a href="#" ng-click="selectEdit(product.id)">
-                    <span class="glyphicons glyphicons-pencil"></span>
+                    <span class="glyphicons glyphicons-pencil">Editar</span>
                 </a>
             </td>
         </tr>
